# TC3002B.501.E6-reddit-mental-health-nlp-analysis

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: phase-2b-commands.md  phase-3-commands.md
reports/conceptual-design/: TC3002B.501.E6_Evidencia1_Fase2_Parte A_DiseñoConceptual.docx
reports/conceptual-design/assets/: diagrama-actividades.mermaid  diagrama-paquetes.mermaid  diagrama-secuencias.mermaid
reports/phase-2b-baseline/: README.md
reports/phase-2b-baseline/assets/: .gitkeep
reports/state-of-the-art/: Makefile  README.md  main.tex  references.bib
scripts/: compare_phase3_results.py  evaluate_baseline.py  evaluate_phase3_llm_raw.py  predict_test_fold.py  run_baseline_experiments.py  run_cross_validation_experiments.py  run_phase3_embedding_classifiers.py  run_phase3_embeddings.py  run_phase3_llm.py  run_phase3_llm_matrix.py  train_baseline.py  visualize_baseline_results.py  visualize_cv_comparison.py  visualize_experiment_comparison.py
src/reddit_mental_health/: __init__.py  config.py  cross_validation.py  data.py  evaluation.py  experiments.py  features.py  interpretability.py  model.py  ollama.py  phase3_config.py  phase3_embeddings.py  phase3_llm.py  preprocessing.py  splitting.py  tracking.py
src/reddit_mh_nlp/: __init__.py
tests/: test_compare_phase3_results.py  test_cross_validation.py  test_data.py  test_evaluation.py  test_experiments.py  test_features.py  test_model.py  test_ollama_phase3.py  test_phase3_embeddings.py  test_phase3_llm.py  test_predict_test_fold.py  test_preprocessing.py  test_splitting.py  test_tracking.py
(+10 files in other folders)
