[project]
name = "reddit-mental-health-nlp-analysis"
version = "0.1.0"
description = "Experimental NLP pipeline for suicidal ideation detection in Reddit posts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_mental_health"]

[tool.ruff]
line-length = 88
src = ["src", "scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.15.12",
]
